--- a/SleepMonitor/bin/AndroidManifest.xml
+++ b/SleepMonitor/bin/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@android:style/Theme.Black" >
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
@@ -24,6 +24,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="SleepMonitoring"></activity>
+        <activity android:name="MyRecords"></activity>
     </application>
 
 </manifest>
