das recording ist nun in einen service ausgelagert. ABER: wenn man während dem recorden die app beendet (mehrmals zurück) und dann wieder in sleepmonitoring geht, dann steht der knopf auf Start Recording -> drücken führt zu fehler

--- a/SleepMonitor/AndroidManifest.xml
+++ b/SleepMonitor/AndroidManifest.xml
@@ -34,6 +34,7 @@
             android:name=".RecordDetails"
             android:label="@string/title_activity_record_details" >
         </activity>
+        <service android:name="RecordingService"></service>
     </application>
 
 </manifest>
