hinzugefügt: statische anzeige eines dial charts. muss noch dynamisch als "Tacho" für die umgebungslautstärke umgeändert werden

--- a/SleepMonitor/.classpath
+++ b/SleepMonitor/.classpath
@@ -3,7 +3,11 @@
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
-	<classpathentry kind="lib" path="libs/achartengine-1.2.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/achartengine-1.2.0.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:file:/C:/Users/Christopher/git/sleepmonitor/SleepMonitor/doc/achartengine-1.1.0-javadocs.zip!/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="output" path="bin/classes"/>
