--- a/SleepMonitor/.classpath
+++ b/SleepMonitor/.classpath
@@ -8,6 +8,11 @@
 			<attribute name="javadoc_location" value="jar:file:/C:/Users/Christopher/git/sleepmonitor/SleepMonitor/doc/achartengine-1.1.0-javadocs.zip!/"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="libs/joda-time-2.4.jar" sourcepath="libs/joda-time-2.4-sources.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/SleepMonitor/libs/joda-time-2.4-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="output" path="bin/classes"/>
